--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,25 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+::-webkit-scrollbar {
+  width: 10px; /* Width of the scrollbar */
+  border-radius: 10px; /* Rounded edges */
+}
+
+/* Track (background) */
+::-webkit-scrollbar-track {
+  background: #04111d; /* Background color */
+  border-radius: 10px; /* Rounded edges */
+}
+
+/* Handle (the draggable part) */
+::-webkit-scrollbar-thumb {
+  background: #0a192f; /* Darker shade for contrast */
+  border-radius: 10px; /* Rounded edges */
+  border: 2px solid #04111d; /* Border to blend with background */
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #1f2a48; /* Slightly lighter shade on hover */
+}
